Convert to Digital Garden + Favicons

--- a/_posts/2024/02/2024-02-25-why-wlst.md
+++ b/_posts/2024/02/2024-02-25-why-wlst.md
@@ -2,8 +2,7 @@
 title: "Why WLST?"
 permalink: /blog/why-wlst
 date: 2024-02-25 14:32:23 +0800
-categories:
-- Oracle WebLogic
+categories: [How-To, Oracle WebLogic]
 tags: [wlst] 
 image:
     path: /assets/img/headers/why-wlst.png
